# bevy_granite

./: Cargo.toml  README.md  architecture.md
assets/scenes/: dungeon.scene
crates/bevy_granite_core/: Cargo.toml
crates/bevy_granite_core/src/: events.rs  lib.rs
crates/bevy_granite_core/src/entities/: component_editor.rs  deserialize.rs  generate_tangents.rs  lifecycle.rs  serialize.rs
crates/bevy_granite_core/src/entities/editable/: README.md  definition.rs  mod.rs
crates/bevy_granite_core/src/entities/editable/types/: mod.rs  plugin.rs  unknown.rs
crates/bevy_granite_core/src/entities/editable/types/camera_3d/: creation.rs  mod.rs  plugin.rs  update_event.rs
crates/bevy_granite_core/src/entities/editable/types/directional_light/: creation.rs  mod.rs  plugin.rs  update_event.rs
crates/bevy_granite_core/src/entities/editable/types/empty/: creation.rs  mod.rs  plugin.rs  update_event.rs
crates/bevy_granite_core/src/entities/editable/types/point_light/: creation.rs  mod.rs  plugin.rs  update_event.rs
crates/bevy_granite_core/src/entities/editable/types/rect_brush/: creation.rs  mod.rs  plugin.rs  update_event.rs
crates/bevy_granite_core/src/entities/editable/types/spot_light/: creation.rs  mod.rs  plugin.rs  ui.rs  update_event.rs
crates/bevy_granite_core/src/shared/: mod.rs  version.rs
crates/bevy_granite_core/src/world/: mod.rs  open.rs  plugin.rs  reload.rs  save.rs
crates/bevy_granite_editor/: Cargo.toml
crates/bevy_granite_expose/: Cargo.toml
docs/: roadmap.md
examples/: dungeon.rs
src/: lib.rs
(+82 files in other folders)
